# evmpeek-cli

./: Cargo.toml  README.md
src/: cmd.rs  main.rs
src/dasm/: mod.rs  opcode.rs  peek.rs
src/dasm/instruction/: operand.rs
